	PR c++/9649 	* cp-tree.h (pushdecl_class_level): Change prototype. 	(push_class_level_binding): Likewise. 	* decl.c (add_binding): Reject duplicate static data members. 	(pushdecl_class_level): Return a value indicating whether or not 	the binding was valid. 	(push_class_level_binding): Likewise. 	* semantics.c (finish_member_declaration): Don't keep invalid 	declarations.

PR c++/9649
	* g++.dg/template/static4.C: New test.
	* g++.old-deja/g++.other/anon7.C: Remove spurious error messages.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68240 138bc75d-0d04-0410-961f-82ee72b054a4