gcc/cp/semantics.c
@@ -1862,8 +1862,6 @@ finish_member_declaration (tree decl)
   if (DECL_LANG_SPECIFIC (decl) && DECL_LANGUAGE (decl) == lang_c)
     SET_DECL_LANGUAGE (decl, lang_cplusplus);
 
-  maybe_add_class_template_decl_list (current_class_type, decl, /*friend_p=*/0);
-
   /* Put functions on the TYPE_METHODS list and everything else on the
      TYPE_FIELDS list.  Note that these are built up in reverse order.
      We reverse them (to obtain declaration order) in finish_struct.  */
@@ -1876,8 +1874,12 @@ finish_member_declaration (tree decl)
 
       TREE_CHAIN (decl) = TYPE_METHODS (current_class_type);
       TYPE_METHODS (current_class_type) = decl;
+
+      maybe_add_class_template_decl_list (current_class_type, decl, 
+					  /*friend_p=*/0);
     }
-  else
+  /* Enter the DECL into the scope of the class.  */
+  else if (TREE_CODE (decl) == USING_DECL || pushdecl_class_level (decl))
     {
       /* All TYPE_DECLs go at the end of TYPE_FIELDS.  Ordinary fields
 	 go at the beginning.  The reason is that lookup_field_1
@@ -1905,9 +1907,8 @@ finish_member_declaration (tree decl)
 	  TYPE_FIELDS (current_class_type) = decl;
 	}
 
-      /* Enter the DECL into the scope of the class.  */
-      if (TREE_CODE (decl) != USING_DECL)
-	pushdecl_class_level (decl);
+      maybe_add_class_template_decl_list (current_class_type, decl, 
+					  /*friend_p=*/0);
     }
 }
 
